--- a/backend/admin-module/src/main/resources/application.properties
+++ b/backend/admin-module/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+# ===============================
+# APP
+# ===============================
 spring.application.name=smartcampus-admin
+server.port=8090
+
+
+# ===============================
+# MYSQL
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/iotdb
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.open-in-view=false
+
+
+# ===============================
+# DEBUG (opcional pero útil)
+# ===============================
+logging.level.org.hibernate.SQL=debug
