--- a/backend/admin-module/pom.xml
+++ b/backend/admin-module/pom.xml
@@ -84,6 +84,15 @@
         	<scope>test</scope>
     	</dependency>
 
+	<!-- Mqtt -->
+		<dependency>
+			<groupId>org.eclipse.paho</groupId>
+			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 
