--- a/backend/admin-module/src/main/resources/application.properties
+++ b/backend/admin-module/src/main/resources/application.properties
@@ -10,7 +10,8 @@ server.port=8090
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/iotdb
 spring.datasource.username=root
-spring.datasource.password=123456
+#spring.datasource.password=123456
+spring.datasource.password=1217
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
@@ -27,3 +28,10 @@ spring.jpa.open-in-view=false
 # DEBUG (opcional pero útil)
 # ===============================
 logging.level.org.hibernate.SQL=debug
+
+# ===============================
+# MQTT
+# ===============================
+mqtt.broker=tcp://localhost:1883
+mqtt.clientId=smartcampus-admin-core
+mqtt.topic=smartcampus/devices/+/telemetry
