--- a/backend/admin-module/src/main/resources/application.properties
+++ b/backend/admin-module/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
