--- a/backend/admin-module/src/main/resources/application.properties
+++ b/backend/admin-module/src/main/resources/application.properties
@@ -10,15 +10,15 @@ server.port=8090
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/iotdb
 spring.datasource.username=root
-spring.datasource.password=123456
-#spring.datasource.password=1217
+#spring.datasource.password=123456
+spring.datasource.password=1217
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
