--- a/backend/admin-module/pom.xml
+++ b/backend/admin-module/pom.xml
@@ -84,6 +84,17 @@
         	<scope>test</scope>
     	</dependency>
 
+		<dependency>
+    		<groupId>org.springframework.integration</groupId>
+    		<artifactId>spring-integration-mqtt</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.eclipse.paho</groupId>
+    		<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+
 	</dependencies>
 
 
